--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
 				placeholder="Name"
 				v-model="newRow"
 				@keyup.enter="addRow"
-
 				/>
 			</div></div>
 	</header>
-	<datarows v-model="rows"></datarows>
+	<datarows v-model="rows" :cols="cols"></datarows>
 	<hr/>
 	<h3>Old System</h3>
 	<hr/>
@@ -56,37 +55,38 @@
 <div></div>
 <template id="datarows-template">
 	<div>
-		<div v-for="row in value" class="row">
-			<datacell v-model="row.id" cellname="id" cellclass="col-sm-1" noneditable="1"></datacell>
-			<datacell v-model="row.name" cellname="name" cellclass="col-sm-3"></datacell>
-			<datacell v-model="row.knownfor" cellname="knownfor" cellclass="col-sm-3"></datacell>
-			<datacell v-model="row.year" cellname="year" cellclass="col-sm-1"></datacell>
-			<datacell v-model="row.degree" cellname="degree" cellclass="col-sm-2"></datacell>
-			<datacell v-model="row.specialization" cellname="specialization" cellclass="col-sm-2"></datacell>
+		<div v-for="(row,rowIndex) in value" class="row">
+			<datacell v-for="(c,colIndex) in cols"
+				v-model="row[c.m]"
+				:cellname="c.m"
+				:cellwidth="c.w"
+				:noneditable="c.noedit"
+				:cellindex="rowIndex+','+colIndex"
+			></datacell>
 		</div>
 	</div>
 </template>
 
 <template id="datacell-template">
-<div :class="[cellclass,'datacell',{'editing':editing}]">
+<div :class="[cellClass,'datacell',{'editing':editing},{'cursor':cursor}]">
 	<div class="datatext"
 			v-text="value"
-			@dblclick="editCell(celldata,cellname)"
-			@keyup.enter="editCell(celldata,cellname)"
+			@click="moveCursor"
+			@dblclick="editCell(celldata,$event)"
 	></div>
-	<div class="dataedit" v-if="editableCell">
+	<div class="dataedit" v-if="editableCell && editing">
 		<input type="text"
 			:value="value"
 			:name="cellname"
-			v-cell-focus="editing"
-			@blur="doneEdit($event.target.value,cellname)"
-			@keyup.enter="doneEdit($event.target.value,cellname)"
-			@keyup.esc="cancelEdit($event.target.value,cellname)"
+			v-cell-focus="editme"
+			@blur="doneEdit($event.target.value,$event)"
+			@keyup.enter="doneEdit($event.target.value,$event)"
+			@keyup.esc="cancelEdit($event.target.value,$event)"
 		 />
 	</div>
 </div>
 </template>
-
+			<!-- @keyup.enter="editCell(celldata,cellname)" -->
 <script type="text/javascript" src="grid.js"></script>
 </body>
 </html>
