--- a/index.html
+++ b/index.html
@@ -10,7 +10,23 @@
 <body>
 <div class="wrapper">
 <section id="gridtable" class="container gridtable">
-	<header class="row">
+
+	<datagrid :rows="rows" :cols="cols"></datagrid>
+	<hr/>
+	<h3>Old System</h3>
+	<hr/>
+
+
+<section>
+	<!-- <pre>{{ $data }}</pre> -->
+</section>
+</section>
+</div>
+<div></div>
+
+<template id="datagrid-template">
+	<div>
+		<header class="row">
 			<div class="col-sm-12 datacell"><div class="datainput">
 			<input class="new-row"
 				autofocus autocomplete="off"
@@ -19,43 +35,8 @@
 				@keyup.enter="addRow"
 				/>
 			</div></div>
-	</header>
-	<datarows v-model="rows" :cols="cols"></datarows>
-	<hr/>
-	<h3>Old System</h3>
-	<hr/>
-<!--
-	<div v-for="row in rows" class="row">
-		<datacell v-model="row.name" cellname="name" cellclass="col-sm-3"></datacell>
-		<datacell v-model="row.knownfor" cellname="knownfor" cellclass="col-sm-4"></datacell>
-		<datacell v-model="row.year" cellname="year" cellclass="col-sm-1"></datacell>
-		<datacell v-model="row.degree" cellname="degree" cellclass="col-sm-2"></datacell>
-		<datacell v-model="row.specialization" cellname="specialization" cellclass="col-sm-2"></datacell>
-	</div>
- -->
-	<!--
-	<div class="col-sm-1 datacell">
-			<div class="datatext" v-text="row.id"></div>
-	</div>
-	-->
-
-	<footer class="row">
-		<div class="col-sm-3"><div class="datatext">Total: <strong>{{ totalrows }}</strong> {{ totalrows | pluralize }}</div></div>
-		<div class="col-sm-9"><div class="datatext">
-			<button class="pull-right btn btn-xs " @click="removeAll" v-show="totalrows">
-				Clear all
-			</button>
-		</div></div>
-	</footer>
-<section>
-	<pre>{{ $data }}</pre>
-</section>
-</section>
-</div>
-<div></div>
-<template id="datarows-template">
-	<div>
-		<div v-for="(row,rowIndex) in value" class="row">
+		</header>
+		<div v-for="(row,rowIndex) in rows" class="row">
 			<datacell v-for="(c,colIndex) in cols"
 				v-model="row[c.m]"
 				:cellname="c.m"
@@ -64,6 +45,14 @@
 				:cellindex="rowIndex+','+colIndex"
 			></datacell>
 		</div>
+		<footer class="row">
+			<div class="col-sm-3"><div class="datatext">Total: <strong>{{ totalrows }}</strong>{{totalcols}} <!-- {{ totalrows | pluralize }} --></div></div>
+			<div class="col-sm-9"><div class="datatext">
+				<button class="pull-right btn btn-xs " @click="removeAll" v-show="totalrows">
+					Clear all
+				</button>
+			</div></div>
+		</footer>
 	</div>
 </template>
 
@@ -74,11 +63,10 @@
 			@click="moveCursor"
 			@dblclick="editCell(celldata,$event)"
 	></div>
-	<div class="dataedit" v-if="editableCell && editing">
+	<div class="dataedit" v-if="editableCell && editing" 			v-cell-focus="editing">
 		<input type="text"
 			:value="value"
 			:name="cellname"
-			v-cell-focus="editme"
 			@blur="doneEdit($event.target.value,$event)"
 			@keyup.enter="doneEdit($event.target.value,$event)"
 			@keyup.esc="cancelEdit($event.target.value,$event)"
@@ -86,6 +74,7 @@
 	</div>
 </div>
 </template>
+			<!-- @input="edited($event.target.value,$event)" -->
 			<!-- @keyup.enter="editCell(celldata,cellname)" -->
 <script type="text/javascript" src="grid.js"></script>
 </body>
