--- a/index.html
+++ b/index.html
@@ -9,22 +9,68 @@
 </head>
 <body>
 <div class="wrapper">
+<script type="text/javascript">
+var cols = [
+		// {m:'id',show:true,w:'10',noneditable:true},
+		{m:'name',show:true,w:'40'},
+		{m:'knownfor',show:true,w:'30'},
+		{m:'year',show:true,w:'20'},
+		{m:'degree',show:true,w:'20'},
+		{m:'specialization',show:true,w:'20'},
+	];
+</script>
 <section id="gridtable" class="container gridtable">
-
 	<datagrid :rows="rows" :cols="cols"></datagrid>
-	<hr/>
-	<h3>Old System</h3>
-	<hr/>
-
-
-<section>
 	<!-- <pre>{{ $data }}</pre> -->
-</section>
+	<button class="pull-right btn btn-xs " @click="removeAll">
+		Clear all
+	</button>
 </section>
 </div>
 <div></div>
 
+<!-- Data Grid Template -->
 <template id="datagrid-template">
+	<div>
+		<div class="row">
+			<div class="col-sm-4">{{ totalrows}} rows</div>
+			<div class="col-sm-8">
+				{{totalcols }} cols:
+				<label v-for="col in cols" class="checkbox-inline"><input type="checkbox" v-model="col.show">{{col.m}}</label>
+			</div>
+		</div>
+		<header class="row">
+			<datacell
+				:cellname="'addrow'"
+				:widthclass="'col-sm-12'"
+				cellindex="-1,-1"
+				v-model="'+ add row'">
+				<!-- <class="datatext" cellindex="-1,-1">+ Add New</div> -->
+			</datacell>
+		</header>
+		<div v-for="(row,rowIndex) in rows" class="row">
+			<datacell v-for="(c,colIndex) in cols"
+				v-model="row[c.m]"
+				:cellname="c.m"
+				:widthclass="colwidths[colIndex]"
+				:noneditable="c.noedit"
+				:cellindex="rowIndex+','+colIndex"
+				v-if="c.show"
+			></datacell>
+		</div>
+	</div>
+</template>
+
+<!-- Data Cell template -->
+<template id="datacell-template">
+<div :class="[widthclass,'datacell',{'editing':editing},{'cursor':cursor}]">
+	<div class="datatext" v-text="value" @click="movecursor" @dblclick="editcell"></div>
+</div>
+</template>
+
+<!-- OLD TEMPLATES -->
+
+<template id="datagrid-template-old">
 	<div>
 		<header class="row">
 			<div class="col-sm-12 datacell"><div class="datainput">
@@ -56,8 +102,8 @@
 	</div>
 </template>
 
-<template id="datacell-template">
-<div :class="[cellClass,'datacell',{'editing':editing},{'cursor':cursor}]">
+<template id="datacell-template-old">
+<div :class="[cellclass,'datacell',{'editing':editing},{'cursor':cursor}]">
 	<div class="datatext"
 			v-text="value"
 			@click="moveCursor"
