--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <script type="text/javascript">
 var cols = [
 		// {m:'id',show:true,w:'10',noneditable:true},
-		{m:'name',show:true,w:'40'},
-		{m:'knownfor',show:true,w:'30'},
-		{m:'year',show:true,w:'20'},
-		{m:'degree',show:true,w:'20'},
-		{m:'specialization',show:true,w:'20'},
+		{m:'name',namespace:"Name",show:true,w:'40',new:true},
+		{m:'knownfor',namespace:"Known For",show:true,w:'30',new:true},
+		{m:'year',namespace:"Graduation Year",show:true,w:'20'},
+		{m:'degree',namespace:"Degree",show:true,w:'20'},
+		{m:'specialization',namespace:"Specialization",show:true,w:'20'},
 	];
 </script>
 <section id="gridtable" class="container gridtable">
@@ -35,7 +35,7 @@ var cols = [
 		<div class="row">
 			<div class="col-sm-6">
 				{{ totalrows}} rows |
-				E: {{ editingcell }} |
+				E: {{ editcell }} |
 				C: {{ cursorcell }}
 			</div>
 			<div class="col-sm-6">
@@ -44,13 +44,7 @@ var cols = [
 			</div>
 		</div>
 		<header class="row">
-			<datacell
-				:cellname="'addrow'"
-				:widthclass="'col-sm-12'"
-				cellindex="-1,-1"
-				v-model="'+ add row'">
-				<!-- <class="datatext" cellindex="-1,-1">+ Add New</div> -->
-			</datacell>
+			<addrow cellindex="-1,-1"/></addrow>
 		</header>
 		<div v-for="(row,rowIndex) in rows" class="row">
 			<datacell v-for="(c,colIndex) in cols"
@@ -70,20 +64,48 @@ var cols = [
 <div :class="[widthclass,'datacell',{'editing':editing},{'cursor':cursor}]">
 	<div class="datatext" v-text="value"
 		v-show="!editing"
-	@click="movecursor"
-	@dblclick="editcell($event)"></div>
-	<div class="dataedit"
-			v-if="editing"
-		>
+	@click="$parent.moveCursor(cellindex)"
+	@dblclick="editCell($event)"></div>
+	<div class="dataedit" v-if="editing">
 		<input type="text"
 			:value="value"
 			:name="cellname"
-			v-focus
+			v-focus="true"
 			@blur="doneEdit($event.target.value,$event)"
 			@keyup.enter="doneEdit($event.target.value,$event)"
 			@keyup.esc="cancelEdit($event.target.value,$event)"
 		 />
 	</div>
+</div>
+</template>
+
+<!-- Data Cell template -->
+<template id="addrow-template">
+<div :class="['datacell',{'editing':editing},{'cursor':cursor}]">
+	<div class="datatext" v-text="'+ Add Row'"
+		v-show="!editing"
+		@click="editCell($event)"></div>
+	<form method="post" @submit="addRow($event)" @reset="reset($event)" v-if="editing" >
+	<div class="row">
+		<div v-for="(c,colIndex) in $parent.cols"
+				:class="$parent.colwidths[colIndex]"
+				v-if="c.new"
+		>
+			<input type="text"
+				:name="c.m"
+				:placeholder="c.namespace"
+				v-model="newrow[c.m]"
+				v-focus="!colIndex"
+			/>
+		</div>
+		<div class="col-sm-2">
+			<input type="submit" name="submit" value="Submit" class="btn btn-xs">
+		</div>
+		<div class="col-sm-2">
+			<input type="reset" name="reset" value="Cancel" class="btn btn-xs">
+		</div>
+	</div>
+	</form>
 </div>
 </template>
 
@@ -93,55 +115,12 @@ var cols = [
 	<div>
 		<header class="row">
 			<div class="col-sm-12 datacell"><div class="datainput">
-			<input class="new-row"
-				autofocus autocomplete="off"
-				placeholder="Name"
-				v-model="newRow"
-				@keyup.enter="addRow"
-				/>
+
 			</div></div>
 		</header>
-		<div v-for="(row,rowIndex) in rows" class="row">
-			<datacell v-for="(c,colIndex) in cols"
-				v-model="row[c.m]"
-				:cellname="c.m"
-				:cellwidth="c.w"
-				:noneditable="c.noedit"
-				:cellindex="rowIndex+','+colIndex"
-			></datacell>
-		</div>
-		<footer class="row">
-			<div class="col-sm-3"><div class="datatext">Total: <strong>{{ totalrows }}</strong>{{totalcols}} <!-- {{ totalrows | pluralize }} --></div></div>
-			<div class="col-sm-9"><div class="datatext">
-				<button class="pull-right btn btn-xs " @click="removeAll" v-show="totalrows">
-					Clear all
-				</button>
-			</div></div>
-		</footer>
 	</div>
 </template>
 
-<template id="datacell-template-old">
-<div :class="[cellclass,'datacell',{'editing':editing},{'cursor':cursor}]">
-	<div class="datatext"
-			v-text="value"
-			@click="moveCursor"
-			@dblclick="editCell(celldata,$event)"
-	></div>
-	<div class="dataedit" v-if="editableCell && editing"
-		v-cell-focus="editing">
-		<input type="text"
-			:value="value"
-			:name="cellname"
-			@blur="doneEdit($event.target.value,$event)"
-			@keyup.enter="doneEdit($event.target.value,$event)"
-			@keyup.esc="cancelEdit($event.target.value,$event)"
-		 />
-	</div>
-</div>
-</template>
-			<!-- @input="edited($event.target.value,$event)" -->
-			<!-- @keyup.enter="editCell(celldata,cellname)" -->
 <script type="text/javascript" src="grid.js"></script>
 </body>
 </html>
