--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Grid Editor</title>
-	<link rel="stylesheet" href="bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" href="bootstrap.min.css" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="grid.css" />
 	<script type="text/javascript" src="vue.js"></script>
 	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.0.3/vue.js"></script> -->
@@ -12,11 +12,11 @@
 <script type="text/javascript">
 var cols = [
 		// {m:'id',show:true,w:'10',noneditable:true},
-		{m:'name',namespace:"Name",show:true,w:'40',new:true},
-		{m:'knownfor',namespace:"Known For",show:true,w:'30',new:true},
-		{m:'year',namespace:"Graduation Year",show:true,w:'20'},
-		{m:'degree',namespace:"Degree",show:true,w:'20'},
-		{m:'specialization',namespace:"Specialization",show:true,w:'20'},
+		{m:'name',namespace:"Name",show:true,w:'25',new:true},
+		{m:'knownfor',namespace:"Known For",show:true,w:'40',new:true},
+		{m:'year',namespace:"Year of Graduation",show:true,w:'8'},
+		{m:'degree',namespace:"Degree",show:true,w:'15'},
+		{m:'specialization',namespace:"Specialization",show:true,w:'15'},
 	];
 </script>
 <section id="gridtable" class="container gridtable">
@@ -43,12 +43,15 @@ var cols = [
 				<label v-for="col in cols" class="checkbox-inline"><input type="checkbox" v-model="col.show">{{col.m}}</label>
 			</div>
 		</div>
-		<header class="row">
-			<addrow cellindex="-1,-1"/></addrow>
-		</header>
-		<div v-for="(row,rowIndex) in rows" class="row">
+		<!-- <header class="row "> -->
+			<addrow cellindex="-1,-1"></addrow>
+		<!-- </header> -->
+		<div v-for="(row,rowIndex) in rows"
+			:class="['row',{'cursorrow':(cursorrow==rowIndex)}]"
+		>
 			<datacell v-for="(c,colIndex) in cols"
 				v-model="row[c.m]"
+				:namespace="c.namespace"
 				:cellname="c.m"
 				:widthclass="colwidths[colIndex]"
 				:noneditable="c.noedit"
@@ -61,16 +64,21 @@ var cols = [
 
 <!-- Data Cell template -->
 <template id="datacell-template">
-<div :class="[widthclass,'datacell',{'editing':editing},{'cursor':cursor}]">
-	<div class="datatext" v-text="value"
+<div :class="[widthclass,'datacell',{'editing':editing},{'cursor':cursor}]"
+	v-inviewport="cursor"
+
+>
+	<div class="datatext" v-text="value?value:''+namespace" :class="{'empty':!value}"
 		v-show="!editing"
-	@click="$parent.moveCursor(cellindex)"
-	@dblclick="editCell($event)"></div>
+	@click="value?$parent.moveCursor(cellindex):editCell($event)"
+	@dblclick="editCell($event)"
+	></div>
 	<div class="dataedit" v-if="editing">
 		<input type="text"
 			:value="value"
 			:name="cellname"
 			v-focus="true"
+			autocomplete="off"
 			@blur="doneEdit($event.target.value,$event)"
 			@keyup.enter="doneEdit($event.target.value,$event)"
 			@keyup.esc="cancelEdit($event.target.value,$event)"
@@ -81,7 +89,10 @@ var cols = [
 
 <!-- Data Cell template -->
 <template id="addrow-template">
-<div :class="['datacell',{'editing':editing},{'cursor':cursor}]">
+<div class="row addrow">
+<div :class="['col-md-12','datacell',{'cursor':cursor}]"
+	v-inviewport="cursor"
+>
 	<div class="datatext" v-text="'+ Add Row'"
 		v-show="!editing"
 		@click="editCell($event)"></div>
@@ -90,35 +101,27 @@ var cols = [
 		<div v-for="(c,colIndex) in $parent.cols"
 				:class="$parent.colwidths[colIndex]"
 				v-if="c.new"
+				class="dataedit"
 		>
+			<label v-text="c.namespace"></label>
 			<input type="text"
 				:name="c.m"
-				:placeholder="c.namespace"
 				v-model="newrow[c.m]"
 				v-focus="!colIndex"
+				autocomplete="off"
+				@keyup.esc="reset($event)"
 			/>
+				<!-- :placeholder="c.namespace" -->
 		</div>
 		<div class="col-sm-2">
-			<input type="submit" name="submit" value="Submit" class="btn btn-xs">
-		</div>
-		<div class="col-sm-2">
-			<input type="reset" name="reset" value="Cancel" class="btn btn-xs">
+			<label>&nbsp;</label>
+			<input type="submit" name="submit" value="Submit" class="btn btn-success">
+			<input type="reset" name="reset" value="Cancel" class="btn btn-danger">
 		</div>
 	</div>
 	</form>
 </div>
-</template>
-
-<!-- OLD TEMPLATES -->
-
-<template id="datagrid-template-old">
-	<div>
-		<header class="row">
-			<div class="col-sm-12 datacell"><div class="datainput">
-
-			</div></div>
-		</header>
-	</div>
+</div>
 </template>
 
 <script type="text/javascript" src="grid.js"></script>
