--- a/index.html
+++ b/index.html
@@ -12,19 +12,17 @@
 <script type="text/javascript">
 var cols = [
 		// {m:'id',show:true,w:'10',noneditable:true},
-		{m:'name',namespace:"Name",show:true,w:'25',new:true},
-		{m:'knownfor',namespace:"Known For",show:true,w:'40',new:true},
+		{m:'name',namespace:"Name",show:true,w:'20',new:true},
+		{m:'knownfor',namespace:"Known For",show:true,w:'50',new:true},
 		{m:'year',namespace:"Year of Graduation",show:true,w:'8'},
 		{m:'degree',namespace:"Degree",show:true,w:'15'},
 		{m:'specialization',namespace:"Specialization",show:true,w:'15'},
+		{m:'tags',namespace:"Tags",show:true,w:'15'},
 	];
 </script>
-<section id="gridtable" class="container gridtable">
+<section id="gridtable" class="datagrid gridtable">
 	<datagrid :rows="rows" :cols="cols"></datagrid>
 	<!-- <pre>{{ $data }}</pre> -->
-	<button class="pull-right btn btn-xs " @click="removeAll">
-		Clear all
-	</button>
 </section>
 </div>
 <div></div>
@@ -32,33 +30,41 @@ var cols = [
 <!-- Data Grid Template -->
 <template id="datagrid-template">
 	<div>
-		<div class="row">
-			<div class="col-sm-6">
-				{{ totalrows}} rows |
-				E: {{ editcell }} |
-				C: {{ cursorcell }}
+
+		<div class="container">
+			<div class="row tube20y">
+				<div class="col-md-6">
+					{{ totalrows}} rows
+					<!-- | E: {{ editcell }}-->
+					<!-- | C: {{ cursorcell }} -->
+					<button class="btn btn-xs " @click="$parent.removeAll">
+						Clear all
+					</button>
+				</div>
+				<div class="col-md-6">
+					<div class="pull-right">
+						{{totalcols}} Cols
+										<label v-for="col in cols" class="checkbox-inline"><input type="checkbox" v-model="col.show">{{col.m}}</label>
+					</div>
+				</div>
 			</div>
-			<div class="col-sm-6">
-				{{totalcols }} cols:
-				<label v-for="col in cols" class="checkbox-inline"><input type="checkbox" v-model="col.show">{{col.m}}</label>
-			</div>
-		</div>
-		<!-- <header class="row "> -->
 			<addrow cellindex="-1,-1"></addrow>
-		<!-- </header> -->
-		<div v-for="(row,rowIndex) in rows"
-			:class="['row',{'cursorrow':(cursorrow==rowIndex)}]"
-		>
-			<datacell v-for="(c,colIndex) in cols"
-				v-model="row[c.m]"
-				:namespace="c.namespace"
-				:cellname="c.m"
-				:widthclass="colwidths[colIndex]"
-				:noneditable="c.noedit"
-				:cellindex="rowIndex+','+colIndex"
-				v-if="c.show"
-			></datacell>
+			<div v-for="(row,rowIndex) in rows"
+				:class="['row',{'cursorrow':(cursorrow==rowIndex)}]"
+			>
+				<datacell v-for="(c,colIndex) in cols"
+					v-model="row[c.m]"
+					:namespace="c.namespace"
+					:cellname="c.m"
+					:widthclass="colwidths[colIndex]"
+					:noneditable="c.noedit"
+					:cellindex="rowIndex+','+colIndex"
+					v-if="c.show"
+				></datacell>
+			</div>
 		</div>
+
+	</div>
 	</div>
 </template>
 
