--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ var cols = [
 	];
 </script>
 <section id="gridtable" class="datagrid gridtable">
-	<datagrid :rows="rows" :cols="cols"></datagrid>
-	<!-- <pre>{{ $data }}</pre> -->
+	<datagrid v-model="rows" :cols="cols"></datagrid>
+	<div class="container"><pre>{{ $data }}</pre></div>
 </section>
 </div>
 <div></div>
@@ -44,14 +44,15 @@ var cols = [
 				<div class="col-md-6">
 					<div class="pull-right">
 						{{totalcols}} Cols
-										<label v-for="col in cols" class="checkbox-inline"><input type="checkbox" v-model="col.show">{{col.m}}</label>
+						<label v-for="col in cols" class="checkbox-inline"><input type="checkbox" v-model="col.show">{{col.m}}</label>
 					</div>
 				</div>
 			</div>
 			<addrow cellindex="-1,-1"></addrow>
-			<div v-for="(row,rowIndex) in rows"
+			<div v-for="(row,rowIndex) in value"
 				:class="['row',{'cursorrow':(cursorrow==rowIndex)}]"
 			>
+					<!-- @input="myInput" -->
 				<datacell v-for="(c,colIndex) in cols"
 					v-model="row[c.m]"
 					:namespace="c.namespace"
@@ -60,6 +61,7 @@ var cols = [
 					:noneditable="c.noedit"
 					:cellindex="rowIndex+','+colIndex"
 					v-if="c.show"
+					:key="rowIndex+','+colIndex"
 				></datacell>
 			</div>
 		</div>
@@ -76,19 +78,20 @@ var cols = [
 >
 	<div class="datatext" v-text="value?value:''+namespace" :class="{'empty':!value}"
 		v-show="!editing"
-	@click="value?$parent.moveCursor(cellindex):editCell($event)"
-	@dblclick="editCell($event)"
+	@dblclick="editCell"
+	@click="$parent.moveCursor(cellindex)"
 	></div>
+<!-- 	@click="value?$parent.moveCursor(cellindex):editCell" -->
 	<div class="dataedit" v-if="editing">
 		<input type="text"
 			:value="value"
 			:name="cellname"
 			v-focus="true"
 			autocomplete="off"
-			@blur="doneEdit($event.target.value,$event)"
-			@keyup.enter="doneEdit($event.target.value,$event)"
-			@keyup.esc="cancelEdit($event.target.value,$event)"
+			@keydown.self.stop.enter="doneEdit"
+			@keydown.self.stop.esc="cancelEdit"
 		 />
+		<!-- @blur="doneEdit($event.target.value,$event)" -->
 	</div>
 </div>
 </template>
@@ -118,6 +121,9 @@ var cols = [
 				@keyup.esc="reset($event)"
 			/>
 				<!-- :placeholder="c.namespace" -->
+		</div>
+		<div v-else>
+			<input type="hidden" :name="c.m" v-model="newrow[c.m]" value="" />
 		</div>
 		<div class="col-sm-2">
 			<label>&nbsp;</label>
