remote url changes for git

--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@ var cols = [
 </div>
 </template>
 
-<script type="text/javascript" src="axios.min.js"></script>
-<script type="text/javascript" src="vue.js"></script>
-<!-- <script src="https://unpkg.com/axios/dist/axios.min.js"></script> -->
-<!-- <script src="https://unpkg.com/vue/dist/vue.min.js"></script> -->
+<!-- <script type="text/javascript" src="axios.min.js"></script> -->
+<!-- <script type="text/javascript" src="vue.js"></script> -->
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="https://unpkg.com/vue/dist/vue.min.js"></script>
 <script type="text/javascript" src="grid.js"></script>
 </body>
 </html>
